[package]
name = "ssh-vpn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# SSH Libraries
ssh2 = { version = "0.9" }
russh = "0.40"
russh-keys = "0.40"

# Networking & Utilities
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
